# storage/api-docs/api-docs.json
@@ -241,6 +241,98 @@
                 }
             }
         },
+        "/api/appointments/{id}/services/{service_id}/status": {
+            "patch": {
+                "tags": [
+                    "Appointment"
+                ],
+                "summary": "Update the service status of a specific appointment",
+                "description": "Update the service status of a specific appointment",
+                "operationId": "7c1cf1e28b5f1fbb455f52da4694db05",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "service_id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UpdateStatusRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "202": {
+                        "description": "Accepted",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/AppointmentResource"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Appointment not found or update failed"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Content",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errors": {
+                                            "properties": {
+                                                "status": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The selected status is invalid."
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/diagnoses": {
             "get": {
                 "tags": [
@@ -525,6 +617,20 @@
                         "type": "integer",
                         "example": 1
                     },
+                    "status": {
+                        "description": "1 = process, 0 = success",
+                        "type": "integer",
+                        "example": 1
+                    }
+                },
+                "type": "object"
+            },
+            "UpdateStatusRequest": {
+                "title": "Update Status Request",
+                "required": [
+                    "status"
+                ],
+                "properties": {
                     "status": {
                         "description": "1 = process, 0 = success",
                         "type": "integer",
